--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
+    "pagination": "^0.4.6",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
